tests/custom/STARIS_2022/operation-type-errors/or-type-error/stderr.expected
Error:
    Parser error in file: or-type-error.essence Error is:
ValidatorError or-type-error.essence:2:19:
  |
2 | such that b = (or(5))
  |                   ^
Type error:
	Expected:"Collection of boolean"
	Got: int

